# Cpp_projet_dauphine272

./: .gitignore  CMakeLists.txt  README.md  trading_sim
data/: mean_reversion_events.csv  test_events.csv  trend_events.csv
include/: BacktestLogger.hpp  CsvWriter.hpp  Events.hpp  MarketDataFeed.hpp  MatchingEngine.hpp  OrderBook.hpp  Portfolio.hpp  Reporting.hpp  RiskMetrics.hpp  RollingWindow.hpp  Strategy.hpp  StrategyEngine.hpp  Types.hpp
output/: equity_curve.csv  market_data.csv  trades.csv
scripts/: plot_results.py
src/: BacktestLogger.cpp  CsvWriter.cpp  MarketDataFeed.cpp  MatchingEngine.cpp  OrderBook.cpp  Portfolio.cpp  Reporting.cpp  RiskMetrics.cpp  Strategy.cpp  StrategyEngine.cpp  main.cpp
tests/: test_core.cpp
